feat: add base template and folder

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,8 @@
             {
                 "devDependencies": true
             }
-        ]
+        ],
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": ["error"]
     }
 }
