--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "lint:auto": "yarn eslint ./src/** --fix --no-color && yarn prettier --write --no-color ."
     },
     "dependencies": {
+        "antd": "^4.21.6",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0"
