--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "lint:auto": "yarn eslint ./src/** --fix --no-color && yarn prettier --write --no-color ."
     },
     "dependencies": {
-        "antd": "^4.21.6",
+        "@chakra-ui/react": "^2.2.4",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "framer-motion": "^6.5.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0"
