--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
         "lint:auto": "yarn eslint --fix --no-color --ext .js,.jsx,.ts,.tsx --ignore-pattern src/fonts/* src/**/* && yarn prettier --write --no-color ."
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.2.4",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "antd": "^4.21.6",
+        "framer-motion": "^6.5.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0"
