--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
                 "extensions": [".js", ".jsx", ".tsx", ".ts"]
             }
         ],
+        "react/jsx-props-no-spreading": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
