--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
         "import/resolver": {
             "node": {
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            },
+            "typescript": {
+                "project": "./tsconfig.json"
             }
         }
     },
