--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "eslint": "^7.32.0 || ^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.25.3",
+        "eslint-import-resolver-typescript": "^3.3.0",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
@@ -43,7 +44,8 @@
         "prettier": "2.6.2",
         "tailwindcss": "^3.1.2",
         "typescript": "^4.6.3",
-        "vite": "^2.9.9"
+        "vite": "^2.9.9",
+        "vite-tsconfig-paths": "^3.5.0"
     },
     "lint-staged": {
         "**/*.{js,jsx,ts,tsx}": [
