--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@emotion/styled": "^11.9.3",
         "axios": "^0.27.2",
         "framer-motion": "^6.5.1",
+        "node-html-parser": "^5.3.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0"
