--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "axios": "^0.27.2",
+        "dompurify": "^2.3.10",
         "framer-motion": "^6.5.1",
         "node-html-parser": "^5.3.3",
         "react": "^18.0.0",
