--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "yarn lint && tsc && vite build",
         "preview": "vite preview",
         "prepare": "husky install",
-        "lint": "yarn eslint --fix --ignore-pattern src/fonts/* src/assets/* src/**/* && yarn prettier --write .",
+        "lint": "yarn eslint --fix  && yarn prettier --write .",
         "lint:auto": "yarn eslint --fix --no-color --ext .js,.jsx,.ts,.tsx && yarn prettier --write --no-color ."
     },
     "dependencies": {
