--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
         "import/resolver": {
             "node": {
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            },
+            "typescript": {
+                "project": "./tsconfig.json"
             }
         }
     },
@@ -52,6 +55,7 @@
             }
         ],
         "no-shadow": "off",
-        "@typescript-eslint/no-shadow": ["error"]
+        "@typescript-eslint/no-shadow": ["error"],
+        "react/require-default-props": "off"
     }
 }
