--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
         "@chakra-ui/react": "^2.2.4",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
-        "@types/node": "^18.0.6",
         "axios": "^0.27.2",
         "dotenv": "^16.0.1",
-        "dompurify": "^2.3.10",
         "framer-motion": "^6.5.1",
         "node-html-parser": "^5.3.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^4.0.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
@@ -44,6 +43,7 @@
         "lint-staged": "^13.0.1",
         "postcss": "^8.4.14",
         "prettier": "2.6.2",
+        "react-error-overlay": "6.0.9",
         "tailwindcss": "^3.1.2",
         "typescript": "^4.6.3",
         "vite": "^2.9.9"
