--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "@emotion/styled": "^11.9.3",
         "@types/node": "^18.0.6",
         "axios": "^0.27.2",
-        "dotenv": "^16.0.1",
         "dompurify": "^2.3.10",
+        "dotenv": "^16.0.1",
         "framer-motion": "^6.5.1",
         "node-html-parser": "^5.3.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-error-overlay": "^6.0.11",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0"
     },
