--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "react-dom": "^18.0.0",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "^4.0.3"
+        "react-scripts": "^4.0.3",
+        "react-twitter-widgets": "^1.11.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
