feat: add util, fix some bugs and image

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,10 @@
             }
         }
     },
+    "globals": {
+        "React": true,
+        "JSX": true
+    },
     "env": {
         "browser": true,
         "es2021": true
