--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-VITE_VITE_APP_TITLE=
+VITE_APP_TITLE=
 VITE_GHOST_API_URL=
 VITE_GHOST_API_CONTENT_API_KEY=
 VITE_GHOST_ADMIN_API_KEY=
+VITE_IP_ADDRESS=
