--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@chakra-ui/react": "^2.2.4",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
+        "@tryghost/content-api": "^1.11.0",
         "axios": "^0.27.2",
         "dotenv": "^16.0.1",
         "framer-motion": "^6.5.1",
@@ -31,6 +32,7 @@
     "devDependencies": {
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/tryghost__content-api": "^1.3.11",
         "@typescript-eslint/eslint-plugin": "^5.27.1",
         "@typescript-eslint/parser": "^5.27.1",
         "@vitejs/plugin-react": "^1.3.0",
