feat: grid on home, add utils, and refacor

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
     },
     "globals": {
         "React": true,
-        "JSX": true
+        "JSX": true,
+        "ChildNode": true,
+        "NodeListOf": true
     },
     "env": {
         "browser": true,
