--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.27.2",
         "dotenv": "^16.0.1",
         "framer-motion": "^6.5.1",
+        "fuse.js": "^6.6.2",
         "node-html-parser": "^5.3.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
