--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,7 @@
             }
         ],
         "no-shadow": "off",
+        "no-use-before-define": "off",
         "@typescript-eslint/no-shadow": ["error"],
         "react/require-default-props": "off"
     }
