--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-twitter-widgets": "^1.11.0"
     },
     "devDependencies": {
+        "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/tryghost__content-api": "^1.3.11",
