--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_TITLE=KATITB2022
-VITE_GHOST_API_URL=http://159.223.61.85:3000
+VITE_GHOST_API_URL=https://pre-ghost-api.adiutor.katitb22.com
 VITE_GHOST_API_CONTENT_API_KEY=e4fc3ac16f182dd2fa7381e57e
