--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "fuse.js": "^6.6.2",
         "latest": "^0.2.0",
         "node": "^18.7.0",
-        "node-html-parser": "^5.3.3",
+        "parse5": "^7.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-icons": "^4.4.0",
