feat: adding defile unit

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 VITE_APP_TITLE=KATITB2022
 VITE_GHOST_API_URL=https://ghost-api.adiutor.katitb22.com
 VITE_GHOST_API_CONTENT_API_KEY=0a0bd8b223de5db6eded6ef1ac
+VITE_SECRET=PeRuBaHanUnTuKbAnGsA
